// file: pkg/db/proto/messages/batch_operation.proto
edition = "2023";

package gcommon.v1.database;

import "pkg/db/proto/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;

/**
 * BatchOperation represents a single operation within a batch execution.
 * Contains the SQL statement and its parameters for batch processing.
 */
message BatchOperation {
  // SQL statement or database operation to execute
  string statement = 1;

  // Parameters for the statement
  repeated QueryParameter parameters = 2 [lazy = true];
}
