// file: pkg/db/proto/requests/begin_transaction_request.proto
import "pkg/common/proto/request_metadata.proto";
edition = "2023";

package gcommon.v1.database;

import "google/protobuf/go_features.proto";
import "pkg/db/proto/proto/messages/request_metadata.proto";

option features.(pb.go).api_level = API_OPAQUE;

/**
 * BeginTransactionRequest represents a request to start a new database transaction.
 * Allows configuration of isolation level, timeout, and read-only mode.
 */
message BeginTransactionRequest {
  // Database name (optional, uses default if not specified)
  string database = 1;

  // Transaction configuration options
  TransactionOptions options = 2 [lazy = true];

  // Request metadata for tracing and authentication
  gcommon.v1.common.RequestMetadata metadata = 3 [lazy = true];
}
