// file: pkg/db/proto/responses/begin_transaction_response.proto
edition = "2023";

package gcommon.v1.database;

import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/db/proto;dbpb";

/**
 * BeginTransactionResponse contains the result of starting a new transaction.
 * Provides the transaction ID and timestamp for tracking.
 */
message BeginTransactionResponse {
  // Unique identifier for the new transaction
  string transaction_id = 1;

  // Timestamp when the transaction was started
  google.protobuf.Timestamp started_at = 2 [lazy = true];
}
