// file: pkg/db/proto/responses/create_database_response.proto
edition = "2023";

package gcommon.v1.database;

import "pkg/common/proto/error.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/db/proto";

/**
 * CreateDatabaseResponse contains the result of a database creation operation.
 * Indicates success status and provides error details if creation failed.
 */
message CreateDatabaseResponse {
  // Whether the database was created successfully
  bool success = 1;

  // Error information if the creation failed
  gcommon.v1.common.Error error = 2 [lazy = true];
}
