// file: pkg/db/proto/requests/execute_batch_request.proto

edition = "2023";

package gcommon.v1.database;

import "google/protobuf/go_features.proto";
// Use DB-specific batch operation definitions
import "pkg/common/proto/request_metadata.proto";
import "pkg/db/proto/batch_execute_options.proto";
import "pkg/db/proto/batch_operation.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/db/proto";

message ExecuteBatchRequest {
  // List of operations to execute in the batch
  repeated DatabaseBatchOperation operations = 1 [lazy = true];

  // Database name (optional, uses default if not specified)
  string database = 2;

  // Batch execution options and configuration
  BatchExecuteOptions options = 3 [lazy = true];

  // Request metadata for tracing and authentication
  gcommon.v1.common.RequestMetadata metadata = 4 [lazy = true];

  // Transaction ID if this batch is part of a transaction
  string transaction_id = 5;
}
