// file: pkg/db/proto/responses/execute_batch_response.proto
edition = "2023";

package gcommon.v1.database;

import "pkg/common/proto/protobuf/go_features.proto";
import "pkg/db/proto/proto/batch_stats.proto";

option features.(pb.go).api_level = API_OPAQUE;

/**
 * ExecuteBatchResponse contains the results of a batch database operation.
 * Includes individual operation results and overall batch statistics.
 */
message ExecuteBatchResponse {
  // Results for each operation in the batch
  repeated BatchOperationResult results = 1 [lazy = true];

  // Overall batch execution statistics
  BatchStats stats = 2 [lazy = true];

  // Error information if the batch failed
  gcommon.v1.common.Error error = 3 [lazy = true];
}
