// file: pkg/db/proto/responses/get_database_info_response.proto
edition = "2023";

package gcommon.v1.database;

import "pkg/db/proto/database_info.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/db/proto";

/**
 * GetDatabaseInfoResponse contains detailed metadata about a database.
 * Includes version, type, capabilities, and connection information.
 */
message GetDatabaseInfoResponse {
  // Detailed database information and metadata
  DatabaseInfo info = 1 [lazy = true];
}
