// file: pkg/db/proto/requests/list_schemas_request.proto
import "pkg/common/proto/request_metadata.proto";
edition = "2023";

package gcommon.v1.database;

import "pkg/common/proto/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;

/**
 * ListSchemasRequest represents a request to retrieve all schemas
 * within a specific database.
 */
message ListSchemasRequest {
  // Database name to list schemas from
  string database = 1;

  // Request metadata for tracing and authentication
  gcommon.v1.common.RequestMetadata metadata = 2 [lazy = true];
}
