// file: pkg/db/proto/requests/commit_transaction_request.proto
edition = "2023";

package gcommon.v1.database;

import "pkg/common/proto/messages/request_metadata.proto";
import "google/protobuf/go_features.proto";

option go_package = "../../../../pkg/db/proto;dbpb";
option features.(pb.go).api_level = API_HYBRID;

/**
 * CommitTransactionRequest represents a request to commit an active transaction.
 * Makes all changes within the transaction permanent.
 */
message CommitTransactionRequest {
  // Transaction ID to commit
  string transaction_id = 1;

  // Request metadata for tracing and authentication
  gcommon.v1.common.RequestMetadata metadata = 2 [lazy = true];
}
