// file: pkg/db/proto/requests/get_database_info_request.proto
edition = "2023";

package gcommon.v1.database;

import "pkg/common/proto/messages/request_metadata.proto";
import "google/protobuf/go_features.proto";

option go_package = "../../../../pkg/db/proto;dbpb";
option features.(pb.go).api_level = API_HYBRID;

/**
 * GetDatabaseInfoRequest represents a request to retrieve metadata about
 * a specific database including version, type, and capabilities.
 */
message GetDatabaseInfoRequest {
  // Name of the database to get information about
  string name = 1;

  // Request metadata for tracing and authentication
  gcommon.v1.common.RequestMetadata metadata = 2 [lazy = true];
}
