// file: pkg/db/proto/requests/rollback_transaction_request.proto

edition = "2023";

package gcommon.v1.database;

import "pkg/common/proto/request_metadata.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/db/proto";

message RollbackTransactionRequest {
  // Transaction ID to rollback
  string transaction_id = 1;

  // Request metadata for tracing and authentication
  gcommon.v1.common.RequestMetadata metadata = 2 [lazy = true];
}
