// file: proto/gcommon/v1/database/messages/execute_request.proto
// version: 1.0.0
// guid: c2d8bf6f-1805-4fbe-8c00-77c616083610

edition = "2023";

package gcommon.v1.database;

import "gcommon/v1/common/messages/request_metadata.proto";
import "gcommon/v1/database/messages/execute_options.proto";
import "gcommon/v1/database/messages/query_parameter.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "v1/database";

message ExecuteRequest {
  // SQL statement or NoSQL operation
  string statement = 1;

  // Statement parameters for parameterized operations
  repeated QueryParameter parameters = 2 [lazy = true];

  // Database name (optional, uses default if not specified)
  string database = 3;

  // Execution options and configuration
  ExecuteOptions options = 4 [lazy = true];

  // Request metadata for tracing and authentication
  gcommon.v1.common.RequestMetadata metadata = 5 [lazy = true];

  // Transaction ID if this operation is part of a transaction
  string transaction_id = 6;
}
