// file: proto/gcommon/v1/database/config/create_database_request.proto

edition = "2023";

package gcommon.v1.database.config;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/messages/request_metadata.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/proto/gcommon/v1/database/messages";

message CreateDatabaseRequest {
  // Name of the database to create
  string name = 1;

  // Database creation options and configuration
  map<string, string> options = 2 [lazy = true];

  // Request metadata for tracing and authentication
  gcommon.v1.common.RequestMetadata metadata = 3 [lazy = true];
}
