// file: proto/gcommon/v1/database/schema/create_schema_response.proto
// version: 1.0.0
// guid: 1c068bcd-cb00-4a27-9dad-0e1a7d938da4
edition = "2023";

package gcommon.v1.database;

import "gcommon/v1/common/messages/error.proto";
import "google/protobuf/go_features.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/sdks/go/gcommon/v1/database";

/**
 * CreateSchemaResponse contains the result of a schema creation operation.
 * Indicates success status and provides error details if creation failed.
 */
message CreateSchemaResponse {
  // Whether the schema was created successfully
  bool success = 1;

  // Error information if the creation failed
  gcommon.v1.common.Error error = 2 [lazy = true];
}
