// file: proto/gcommon/v1/database/schema/create_schema_request.proto

edition = "2023";

package gcommon.v1.database.schema;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/api/request_metadata.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package gcommon.v1.database.schema;

message CreateSchemaRequest {
  // Database name where the schema will be created
  string database = 1;

  // Name of the schema to create
  string schema = 2;

  // Request metadata for tracing and authentication
  gcommon.v1.common.RequestMetadata metadata = 3 [lazy = true];
}
